left aligned text on table, fixes 'value' header

--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ table, th, td{
     border: 1px solid black;
     background-color: lightblue;
 }
+
+table {
+    text-align: left;
+}
